zellij-utils/src/kdl/snapshots/zellij_utils__kdl__serialize_and_deserialize_session_info.snap
---
source: zellij-utils/src/kdl/mod.rs
expression: serialized
---
name ""
tabs {
}
panes {
}
connected_clients 0
web_clients_allowed false
web_client_count 0
available_layouts {
}
tab_history {
}
pane_history {
}
creation_time 0
session_incarnation ""
rail_order 0
