zellij-utils/src/kdl/snapshots/zellij_utils__kdl__themes_to_string_with_combined_definitions.snap
---
source: zellij-utils/src/kdl/mod.rs
assertion_line: 6933
expression: serialized.to_string()
---
themes {
    default {
        text_unselected {
            base 255 255 255
            background 20
            emphasis_0 208 135 112
            emphasis_1 80
            emphasis_2 40
            emphasis_3 70
        }
        text_selected {
            base 255 255 255
            background 10
            emphasis_0 208 135 112
            emphasis_1 80
            emphasis_2 40
            emphasis_3 70
        }
        ribbon_selected {
            base 20
            background 40
            emphasis_0 30
            emphasis_1 208 135 112
            emphasis_2 70
            emphasis_3 60
        }
        ribbon_unselected {
            base 20
            background 1
            emphasis_0 30
            emphasis_1 255 255 255
            emphasis_2 60
            emphasis_3 70
        }
        table_title {
            base 40
            background 0
            emphasis_0 208 135 112
            emphasis_1 80
            emphasis_2 40
            emphasis_3 70
        }
        table_cell_selected {
            base 255 255 255
            background 10
            emphasis_0 208 135 112
            emphasis_1 80
            emphasis_2 40
            emphasis_3 70
        }
        table_cell_unselected {
            base 255 255 255
            background 20
            emphasis_0 208 135 112
            emphasis_1 80
            emphasis_2 40
            emphasis_3 70
        }
        list_selected {
            base 255 255 255
            background 10
            emphasis_0 208 135 112
            emphasis_1 80
            emphasis_2 40
            emphasis_3 70
        }
        list_unselected {
            base 255 255 255
            background 20
            emphasis_0 208 135 112
            emphasis_1 80
            emphasis_2 40
            emphasis_3 70
        }
        frame_selected {
            base 40
            background 0
            emphasis_0 208 135 112
            emphasis_1 80
            emphasis_2 70
            emphasis_3 0
        }
        frame_unselected {
            base 240
            background 234
            emphasis_0 244
            emphasis_1 240
            emphasis_2 16
            emphasis_3 240
        }
        frame_highlight {
            base 208 135 112
            background 0
            emphasis_0 70
            emphasis_1 0
            emphasis_2 208 135 112
            emphasis_3 208 135 112
        }
        exit_code_success {
            base 40
            background 0
            emphasis_0 80
            emphasis_1 20
            emphasis_2 70
            emphasis_3 60
        }
        exit_code_error {
            base 30
            background 0
            emphasis_0 50
            emphasis_1 0
            emphasis_2 0
            emphasis_3 0
        }
        multiplayer_user_colors {
            player_1 70
            player_2 60
            player_3 0
            player_4 50
            player_5 80
            player_6 0
            player_7 30
            player_8 0
            player_9 0
            player_10 0
        }
    }
}
